--- a/lib/Dockerfile
+++ b/lib/Dockerfile
@@ -1,5 +1,5 @@
 FROM quay.io/loki-xer/jarvis-md:latest
-RUN git clone https://github.com/Zeta-XD/ezraa /root/bot/
+RUN git clone https://github.com/Louis-XD/open-ezra /root/bot/
 WORKDIR /root/bot/
 RUN yarn install --network-concurrency 1
 CMD ["npm", "start"]
