--- a/app.json
+++ b/app.json
@@ -3,9 +3,9 @@
   "description": "EZRA Multi Device whatsapp bot",
   "logo": "https://i.imgur.com/pae05LQ.jpeg",
   "keywords": ["whatsapp"],
-  "repository": "https://github.com/Zeta-XD/ezraa",
-  "website": "https://github.com/Zeta-XD/ezraa",
-  "success_url": "https://github.com/Zeta-XD/ezraa",
+  "repository": "https://github.com/Louis-XD/EZRA-XD",
+  "website": "https://github.com/Louis-XD/EZRA-XD",
+  "success_url": "https://github.com/Louis-XD/EZRA-XD",
   "stack": "container",
   "env": {
     "ANTI_LINK": {
@@ -27,22 +27,22 @@
      "AUDIO_DATA": {
       "description": "audio data , title;artist;image url",
       "required": "false",
-      "value": "𝐳𝐞𝐭𝐚𝐚𝐡𝐡 ; 𝐞𝐳𝐫𝐚𝐚𝐡𝐡-𝐱𝐝 ; https://i.imgur.com/Ou56ggv.jpeg"
+      "value": "Abhiyh ; EZRA-XD ; https://i.imgur.com/Ou56ggv.jpeg"
      },
      "CAPTION": {
       "description": "enter your media caption",
       "required": "false",
-      "value": "_𝐳𝐞𝐭𝐚𝐚𝐡𝐡👀🦋!_"
+      "value": "_*EZRA-XD_"
     },
        "STICKER_DATA": {
       "description": "Sticker pack name, eg : Ezra;©️Louis-X0",
       "required": "false",
-      "value": "𝐙𝐞𝐭𝐚-𝐗𝐃;𝐁𝐚𝐝𝐚𝐧 𝐬𝐞𝐫⚇"
+      "value": "Ezra-XD;Abhiyh"
     },
        "BOT_INFO": {
       "description": "Bot info : botname;ownername;imageurl - image or video",
       "required": "false",
-      "value": "𝐄𝐳𝐫𝐚𝐡𝐡-𝐗𝐃;𝐙𝐞𝐭𝐚𝐡𝐡;https://i.imgur.com/nAkM1zV.mp4"
+      "value": "EZRA-XD;Abhiyh;https://i.imgur.com/nAkM1zV.mp4"
     },
      "ALWAYS_ONLINE": {
       "description": "Bot online online : true",
