--- a/app.json
+++ b/app.json
@@ -27,22 +27,22 @@
      "AUDIO_DATA": {
       "description": "audio data , title;artist;image url",
       "required": "false",
-      "value": "Abhiyh ; EZRA-XD ; https://i.imgur.com/Ou56ggv.jpeg"
+      "value": "𝐋𝐨𝐮𝐢𝐬-𝐗𝐃;𝐄𝐳𝐫𝐚 𝐗𝐃; https://i.imgur.com/Ou56ggv.jpeg"
      },
      "CAPTION": {
       "description": "enter your media caption",
       "required": "false",
-      "value": "_*EZRA-XD_"
+      "value": "\n\n\n\n\n 𝙀𝙯𝙧𝙖𝙖𝙖𝙖𝙖𝙖𝙝𝙝𝙝𝙝🥹💕"
     },
        "STICKER_DATA": {
       "description": "Sticker pack name, eg : Ezra;©️Louis-X0",
       "required": "false",
-      "value": "Ezra-XD;Abhiyh"
+      "value": "𝐄𝐳𝐫𝐚 𝐗𝐃;©️ 𝐋𝐨𝐮𝐢𝐬-𝐗𝐃"
     },
        "BOT_INFO": {
       "description": "Bot info : botname;ownername;imageurl - image or video",
       "required": "false",
-      "value": "EZRA-XD;Abhiyh;https://i.imgur.com/nAkM1zV.mp4"
+      "value": "𝐋𝐨𝐮𝐢𝐬-𝐗𝐃;𝐋𝐨𝐮𝐢𝐬-𝐗𝐃;https://i.imgur.com/nAkM1zV.mp4"
     },
      "ALWAYS_ONLINE": {
       "description": "Bot online online : true",
